--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "davinti",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-    "start": "ts-node src/server.ts",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.3",
-    "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.5.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "jest": "^27.4.5",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
-  },
-  "dependencies": {
-    "express": "^4.17.2",
-    "express-async-errors": "^3.1.1",
-    "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.6.0",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.11"
-  }
+   "name": "davinti",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "scripts": {
+      "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+      "start": "ts-node src/index.ts",
+      "test": "jest",
+      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+   },
+   "devDependencies": {
+      "@babel/plugin-proposal-decorators": "^7.16.5",
+      "@babel/preset-env": "^7.16.5",
+      "@babel/preset-typescript": "^7.16.5",
+      "@types/express": "^4.17.13",
+      "@types/jest": "^27.0.3",
+      "@types/node": "^8.0.29",
+      "@types/uuid": "^8.3.3",
+      "@typescript-eslint/eslint-plugin": "^5.7.0",
+      "@typescript-eslint/parser": "^5.7.0",
+      "eslint": "^8.5.0",
+      "eslint-config-airbnb-base": "^15.0.0",
+      "eslint-plugin-import": "^2.25.3",
+      "jest": "^27.4.5",
+      "ts-node-dev": "^1.1.8",
+      "typescript": "3.3.3333",
+      "ts-node": "3.3.0"
+   },
+   "dependencies": {
+      "express": "^4.17.2",
+      "express-async-errors": "^3.1.1",
+      "pg": "^8.7.1",
+      "reflect-metadata": "^0.1.10",
+      "tsyringe": "^4.6.0",
+      "typeorm": "0.2.41",
+      "uuid": "^8.3.2",
+      "yup": "^0.32.11",
+      "mysql": "^2.14.1"
+   }
 }
