--- a/ormconfig.json
+++ b/ormconfig.json
@@ -8,6 +8,7 @@
    "migrations": [
       "src/database/typeorm/migration/**/*.ts"
    ],
+   "entities": ["./src/**/entities/*.ts"],
    "cli": {
       "migrationsDir": "src/database/typeorm/migration"
    }
