--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
    "scripts": {
       "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
       "start": "ts-node src/index.ts",
-      "test": "jest",
+      "test": "jest --silent",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
    },
    "devDependencies": {
@@ -19,13 +19,14 @@
       "@types/uuid": "^8.3.3",
       "@typescript-eslint/eslint-plugin": "^5.7.0",
       "@typescript-eslint/parser": "^5.7.0",
+      "babel-plugin-transform-typescript-metadata": "^0.3.2",
       "eslint": "^8.5.0",
       "eslint-config-airbnb-base": "^15.0.0",
       "eslint-plugin-import": "^2.25.3",
       "jest": "^27.4.5",
+      "ts-node": "3.3.0",
       "ts-node-dev": "^1.1.8",
-      "typescript": "3.3.3333",
-      "ts-node": "3.3.0"
+      "typescript": "3.3.3333"
    },
    "dependencies": {
       "express": "^4.17.2",
@@ -35,7 +36,6 @@
       "tsyringe": "^4.6.0",
       "typeorm": "0.2.41",
       "uuid": "^8.3.2",
-      "yup": "^0.32.11",
-      "mysql": "^2.14.1"
+      "yup": "^0.32.11"
    }
 }
