--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
    "scripts": {
       "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
       "start": "ts-node src/index.ts",
-      "test": "jest --silent",
+      "test": "jest",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
    },
    "devDependencies": {
       "@babel/plugin-proposal-decorators": "^7.16.5",
       "@babel/preset-env": "^7.16.5",
       "@babel/preset-typescript": "^7.16.5",
+      "@types/cors": "^2.8.12",
       "@types/express": "^4.17.13",
       "@types/jest": "^27.0.3",
       "@types/node": "^8.0.29",
@@ -29,6 +30,7 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "express": "^4.17.2",
       "express-async-errors": "^3.1.1",
       "pg": "^8.7.1",
